--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "lodash": "^4.17.21",
     "papaparse": "^5.3.2",
-    "puppeteer": "^19.4.1"
+    "puppeteer": "^19.4.1",
+    "qs": "^6.11.0"
   }
 }
